# SolanaMusicPlayer

./: PROJECT_DESCRIPTION.md  README.md
anchor_project/music_player/: Anchor.toml  package-lock.json
anchor_project/music_player/programs/music_player/: Cargo.toml
anchor_project/music_player/programs/music_player/src/: errors.rs  lib.rs
anchor_project/music_player/programs/music_player/src/Marketplace/: constants.rs  lib.rs
anchor_project/music_player/programs/music_player/src/Marketplace/instructions/: cancel_order.rs  change_config.rs  close_market.rs  create_market.rs  create_open_orders.rs  initialize.rs  mod.rs  place_order.rs  take_order.rs  transfer_admin.rs
anchor_project/music_player/programs/music_player/src/Marketplace/state/: global.rs  market.rs  open_orders.rs
anchor_project/music_player/programs/music_player/src/Minting/: create_token.rs  token_mint.rs
anchor_project/music_player/programs/music_player/src/instructions/: add_track_to_playlist.rs  create_playlist.rs  initialize_user.rs  mod.rs  remove_track_from_playlist.rs  upload_track.rs
anchor_project/music_player/programs/music_player/src/state/: mod.rs  playlist.rs  track.rs  user_profile.rs
anchor_project/music_player/tests/: music_player.ts
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  music_player.ts  vite-env.d.ts
frontend/src/hooks/: useMusicPlayer.ts
frontend/src/idl/: music_player.json
frontend/src/lib/: coverArt.ts  solana-program.ts
frontend/src/pages/: Index.tsx  Playlist.tsx
(+11 files in other folders)
